<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:scrollbarSize="5dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingming"
            android:id="@+id/textView2" android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp" app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName2"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName2"/>
    <TextView

            android:text="@string/nianling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp" app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName" android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"/>
    <TextView
            android:text="@string/zhuanye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textSize="24sp"
            android:layout_marginTop="286dp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName3" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="4dp" android:layout_marginRight="4dp"/>
    <TextView
            android:text="@string/xingbie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName2" android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/xuehao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView5"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName" android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/banji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView6"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3" android:layout_marginEnd="150dp"
            android:layout_marginRight="150dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            android:text="@string/text"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/textView5" android:layout_marginBottom="71dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3" android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:text="@string/text"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            android:layout_marginTop="110dp"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="9dp" android:layout_marginRight="9dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:text="@string/text"
            android:ems="10"
            android:id="@+id/editTextTextPersonName3"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" app:layout_constraintEnd_toStartOf="@+id/textView6"
            android:layout_marginEnd="11dp" android:layout_marginRight="11dp"/>
    <Button
            android:text="@string/qingchu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"
            android:layout_marginTop="39dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            app:layout_constraintEnd_toStartOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="3dp" android:layout_marginRight="3dp"/>
    <Button
            android:text="@string/tijiao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            android:layout_marginTop="38dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="19dp"
            android:layout_marginRight="19dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>